Fixed center spacing for Login page

--- a/src/Login/Login.css
+++ b/src/Login/Login.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   height: 100vh;
-  width:100%;
+  width:100vw;
 }
 
 .title {
